@@ -39,9 +39,13 @@ import com.gentics.api.lib.etc.ObjectTransformer;
 import com.gentics.api.lib.exception.NodeException;
 import com.gentics.api.lib.exception.ReadOnlyException;
 import com.gentics.contentnode.db.DBUtils;
+import com.gentics.contentnode.db.DBUtils.BatchUpdater;
+import com.gentics.contentnode.etc.Consumer;
 import com.gentics.contentnode.etc.ContentNodeDate;
 import com.gentics.contentnode.etc.Feature;
 import com.gentics.contentnode.etc.NodeConfig;
+import com.gentics.contentnode.etc.Operator;
+import com.gentics.contentnode.etc.Supplier;
 import com.gentics.contentnode.events.DependencyObject;
 import com.gentics.contentnode.events.Events;
 import com.gentics.contentnode.events.TransactionalTriggerEvent;
@@ -83,6 +87,7 @@ import com.gentics.contentnode.object.PublishableNodeObject;
 import com.gentics.contentnode.publish.PublishQueue;
 import com.gentics.contentnode.publish.PublishQueue.Action;
 import com.gentics.contentnode.runtime.NodeConfigRuntimeConfiguration;
+import com.gentics.lib.db.DBQuery;
 import com.gentics.lib.db.SQLExecutor;
 import com.gentics.lib.etc.StringUtils;
 import com.gentics.lib.i18n.CNI18nString;
@@ -280,15 +285,16 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		}
 
 		String insertSQL = null;
+		String insertSQLWithoutParams = null;
+		String insertSQLParams = null;
 		if (insertFields.isEmpty()) {
-			insertSQL = String.format("INSERT INTO `%s`", tableName);
+			insertSQLWithoutParams = "INSERT INTO `%s`".formatted(tableName);
+			insertSQLParams = "";
 		} else {
-			insertSQL = String.format(
-				"INSERT INTO `%s` (%s) VALUES (%s)",
-				tableName,
-				insertFields.stream().map(field -> String.format("`%s`", field)).collect(Collectors.joining(", ")),
-				insertFields.stream().map(s -> "?").collect(Collectors.joining(", ")));
+			insertSQLWithoutParams = "INSERT INTO `%s` (%s) VALUES ".formatted(tableName, insertFields.stream().map(field -> String.format("`%s`", field)).collect(Collectors.joining(", ")));
+			insertSQLParams = "(%s)".formatted(insertFields.stream().map(s -> "?").collect(Collectors.joining(", ")));
 		}
+		insertSQL = "%s%s".formatted(insertSQLWithoutParams, insertSQLParams);
 		String updateSQL = null;
 
 		if (!updateFields.isEmpty()) {
@@ -301,6 +307,7 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		try {
 			FactoryDataInformation info = new FactoryDataInformation().setSelectSQL(createSelectStatement(tableName))
 					.setBatchLoadSQL(createBatchLoadStatement(tableName)).setInsertSQL(insertSQL)
+					.setInsertSQLWithoutParams(insertSQLWithoutParams).setInsertSQLParams(insertSQLParams)
 					.setInsertFields(insertFields).setUpdateSQL(updateSQL).setUpdateFields(updateFields)
 					.setFactoryDataFields(dataFields).setRestModelField(restModelField)
 					.setSetIdMethod(clazz.getMethod("setId", Integer.class)).setUuid(uuid);
@@ -319,11 +326,22 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 
 	/**
 	 * Save the given factory object into the DB
-	 * @param clazz factory class
 	 * @param object object
 	 * @throws NodeException
 	 */
 	protected final static void saveFactoryObject(NodeObject object) throws NodeException {
+		saveFactoryObject(object, null, null, null);
+	}
+
+	/**
+	 * Save the given factory object into the DB
+	 * @param object object
+	 * @param batchUpdater optional batch updater
+	 * @param before optional before handler
+	 * @param after optional after handler
+	 * @throws NodeException
+	 */
+	protected final static void saveFactoryObject(NodeObject object, BatchUpdater batchUpdater, Operator before, Operator after) throws NodeException {
 		FactoryDataInformation info = FACTORY_DATA_INFO.get(ObjectTransformer.getInt(object.getTType(), -1));
 
 		if (info == null) {
@@ -335,21 +353,51 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		if (isNew) {
 			assertNewGlobalId(object);
 
-			// insert a new record
-			List<Integer> keys = DBUtils.executeInsert(info.insertSQL, info.getInsertData(object));
+			Supplier<Object[]> paramSupplier = () -> info.getInsertData(object);
 
-			if (keys.size() == 1) {
+			Consumer<Integer> generatedKeysHandler = key -> {
 				// set the new entry id
-				info.setId(object, keys.get(0));
+				info.setId(object, key);
 				if (info.uuid) {
-					synchronizeGlobalId(object);
+					if (batchUpdater != null) {
+						batchUpdater.addObjectToSynchronize(object);
+					} else {
+						synchronizeGlobalId(object);
+					}
 				}
+			};
+
+			if (batchUpdater != null) {
+				batchUpdater.add(info.insertSQLWithoutParams, info.insertSQLParams, Transaction.INSERT_STATEMENT,
+						paramSupplier, generatedKeysHandler, before, after);
 			} else {
-				throw new NodeException("Error while inserting new object, could not get the insertion id");
+				if (before != null) {
+					before.operate();
+				}
+				// insert a new record
+				List<Integer> keys = DBUtils.executeInsert(info.insertSQL, paramSupplier.supply());
+
+				if (keys.size() == 1) {
+					generatedKeysHandler.accept(keys.get(0));
+				} else {
+					throw new NodeException("Error while inserting new object, could not get the insertion id");
+				}
+
+				if (after != null) {
+					after.operate();
+				}
 			}
+
 		} else {
 			if (!ObjectTransformer.isEmpty(info.updateSQL)) {
+				if (before != null) {
+					before.operate();
+				}
 				DBUtils.executeUpdate(info.updateSQL, info.getUpdateData(object));
+				if (after != null) {
+					after.operate();
+				}
+				TransactionManager.getCurrentTransaction().clearCache(object.getObjectInfo().getObjectClass(), object.getId());
 			}
 		}
 	}
@@ -721,7 +769,7 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 
 				ids.add(obj.getId());
 
-				t.dirtObjectCache(clazz, obj.getId(), true);
+				t.clearCache(clazz, obj.getId());
 			}
 
 			DBUtils.executeMassStatement(deleteSql, ids, 1, null);
@@ -772,7 +820,7 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		if (ttype > 0) {
 			FactoryDataInformation factoryDataInfo = FACTORY_DATA_INFO.get(ttype);
 			if (factoryDataInfo != null) {
-				return batchLoadDbObjects(clazz, ids, info, factoryDataInfo.batchLoadSQL + buildIdSql(ids));
+				return batchLoadDbObjects(clazz, ids, info, factoryDataInfo.batchLoadSQL);
 			}
 		}
 		return Collections.emptyList();
@@ -821,12 +869,14 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		FactoryDataRow row = null;
 
 		try {
-			stmt = t.prepareStatement(sql);
-			stmt.setInt(1, id);
+			try (DBQuery h = DBQuery.handle(sql)) {
+				stmt = t.prepareStatement(sql);
+				stmt.setInt(1, id);
 
-			rs = stmt.executeQuery();
-			if (rs.next()) {
-				row = new FactoryDataRow(rs);
+				rs = stmt.executeQuery();
+				if (rs.next()) {
+					row = new FactoryDataRow(rs);
+				}
 			}
 
 			// if the object shall contain versioned data and a version sql was provided, use it to get the versioned data
@@ -840,31 +890,33 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 				t.closeResultSet(rs);
 				t.closeStatement(stmt);
 
-				// prepare the statement for fetching
-				stmt = t.prepareStatement(versionSQL);
-				for (int i = 0; i < versionSQLParams.length; i++) {
-					switch (versionSQLParams[i]) {
-					case ID:
-						stmt.setInt(i + 1, id);
-						break;
+				try (DBQuery h = DBQuery.handle(versionSQL)) {
+					// prepare the statement for fetching
+					stmt = t.prepareStatement(versionSQL);
+					for (int i = 0; i < versionSQLParams.length; i++) {
+						switch (versionSQLParams[i]) {
+						case ID:
+							stmt.setInt(i + 1, id);
+							break;
 
-					case VERSIONTIMESTAMP:
-						stmt.setInt(i + 1, info.getVersionTimestamp());
-						break;
+						case VERSIONTIMESTAMP:
+							stmt.setInt(i + 1, info.getVersionTimestamp());
+							break;
 
-					default:
-						throw new NodeException(
-								"Error while loading versioned data for object {" + id + "} of class {" + clazz.getName() + "}: unexpected parameter type "
-								+ versionSQLParams[i] + " found");
+						default:
+							throw new NodeException(
+									"Error while loading versioned data for object {" + id + "} of class {" + clazz.getName() + "}: unexpected parameter type "
+											+ versionSQLParams[i] + " found");
+						}
 					}
-				}
 
-				rs = stmt.executeQuery();
-				if (rs.next()) {
-					if (row != null) {
-						row.mergeWithResultSet(rs);
-					} else {
-						row = new FactoryDataRow(rs);
+					rs = stmt.executeQuery();
+					if (rs.next()) {
+						if (row != null) {
+							row.mergeWithResultSet(rs);
+						} else {
+							row = new FactoryDataRow(rs);
+						}
 					}
 				}
 			}
@@ -931,35 +983,26 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 			return objects;
 		}
 
-		Transaction t = TransactionManager.getCurrentTransaction();
-
-		Collection<T> objs = new ArrayList<T>(ids.size());
-
-		Statement stmt = null;
-		ResultSet rs = null;
-
 		try {
-
 			Map<Integer, List<Integer>[]> idMap = fetchIdMap((Collection<Integer>) ids, preloadIdSql);
+			Collection<T> objs = new ArrayList<T>(ids.size());
 
-			stmt = t.getStatement();
-			rs = stmt.executeQuery(sql);
+			DBUtils.executeMassStatement(sql, ids, 1, new SQLExecutor() {
+				@Override
+				public void handleResultSet(ResultSet rs) throws SQLException, NodeException {
+					while (rs.next()) {
+						int id = rs.getInt("id");
+						List<Integer>[] idLists = (idMap != null ? idMap.get(id) : null);
 
-			while (rs.next()) {
-				Integer id = new Integer(rs.getInt("id"));
-				List<Integer>[] idLists = (idMap != null ? idMap.get(id) : null);
+						objs.add((T) loadResultSet(clazz, id, info, new FactoryDataRow(rs), idLists));
+					}
+				}
+			});
 
-				objs.add((T) loadResultSet(clazz, id, info, new FactoryDataRow(rs), idLists));
-			}
-
+			return objs;
 		} catch (SQLException e) {
 			throw new NodeException("Could not batch-load objects", e);
-		} finally {
-			t.closeResultSet(rs);
-			t.closeStatement(stmt);
 		}
-
-		return objs;
 	}
 
 	/**
@@ -2099,6 +2142,16 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		protected String insertSQL;
 
 		/**
+		 * First part of the SQL Statement to insert a new record (up to and including "VALUES ")
+		 */
+		protected String insertSQLWithoutParams;
+
+		/**
+		 * Second part of the SQL Statement to insert a new record (after "VALUES ")
+		 */
+		protected String insertSQLParams;
+
+		/**
 		 * List of fields to insert
 		 */
 		protected List<String> insertFields;
@@ -2180,6 +2233,26 @@ public abstract class AbstractFactory implements BatchObjectFactory {
 		 */
 		public FactoryDataInformation setInsertSQL(String insertSQL) {
 			this.insertSQL = insertSQL;
+			return this;
+		}
+
+		/**
+		 * Set the first part of the insert SQL Statement
+		 * @param insertSQLWithoutParams SQL
+		 * @return fluent API
+		 */
+		public FactoryDataInformation setInsertSQLWithoutParams(String insertSQLWithoutParams) {
+			this.insertSQLWithoutParams = insertSQLWithoutParams;
+			return this;
+		}
+
+		/**
+		 * Set the second part of the insert SQL Statement
+		 * @param insertSQLParams SQL
+		 * @return fluent API
+		 */
+		public FactoryDataInformation setInsertSQLParams(String insertSQLParams) {
+			this.insertSQLParams = insertSQLParams;
 			return this;
 		}
 
